// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render SearchForm component handle onChange event correctly 1`] = `
<form
  className="searchForm"
  onSubmit={[Function]}
>
  <input
    className="searchForm__input"
    onChange={[Function]}
    value="test"
  />
  <button
    aria-label="Search"
    className="searchForm__button"
    type="submit"
  />
</form>
`;

exports[`render SearchForm component handle submit event correctly 1`] = `
<form
  className="searchForm"
  onSubmit={[Function]}
>
  <input
    className="searchForm__input"
    onChange={[Function]}
    value=""
  />
  <button
    aria-label="Search"
    className="searchForm__button"
    type="submit"
  />
</form>
`;

exports[`render SearchForm component render correctly 1`] = `
<form
  className="searchForm"
  onSubmit={[Function]}
>
  <input
    className="searchForm__input"
    onChange={[Function]}
    value=""
  />
  <button
    aria-label="Search"
    className="searchForm__button"
    type="submit"
  />
</form>
`;
